Fixxing Choose and Benefit spacing

--- a/src/components/Benefits/Benefits.css
+++ b/src/components/Benefits/Benefits.css
@@ -1,5 +1,5 @@
 .benefits {
-    max-height: 230vh;
+    max-height: 140vh;
 }
 .benefits .light-green {
     background-color: #F4FAFA;
